--- a/ems/pom.xml
+++ b/ems/pom.xml
@@ -13,8 +13,10 @@
 	</parent>
 
 	<properties>
-		<shiro.version>1.2.4</shiro.version>
 		<java.version>1.7</java.version>
+
+		<shiro.version>1.2.4</shiro.version>
+		<fastjson.version>1.2.31</fastjson.version>
 	</properties>
 
 	<dependencies>
@@ -84,7 +86,7 @@
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
-			<version>1.2.15</version>
+			<version>${fastjson.version}</version>
 		</dependency>
 	</dependencies>
 
